kubernetes backend docs

--- a/docs/features/6.backend.md
+++ b/docs/features/6.backend.md
@@ -19,3 +19,19 @@ spec:
       path = "/tmp/tfmodule/mytfstate.tfstate"
     }
 ```
+
+## Using Kubernetes as a terraform backend
+```yaml
+apiVersion: run.terraform-operator.io/v1alpha1
+kind: Terraform
+...
+spec:
+  ...
+  backend: |
+   backend "kubernetes" {
+    secret_suffix     = "example-module"
+    in_cluster_config = true
+  }
+```
+
+`Suffix` used when creating secrets. Secrets will be named in the format: tfstate-{workspace}-{secret_suffix}.
