add input variable from an output of a dependency (#11)
* add variable as an output from another workflow

* add output secret name to terraform print column

Co-authored-by: ibraheem Al Saady <ibraheemalsaady@ibraheems-MacBook-Pro-2.local>

--- a/docs/features/3.variables.md
+++ b/docs/features/3.variables.md
@@ -60,3 +60,51 @@ spec:
       #      name: common-cfg
       #      key: some-key
 ```
+
+## Variables from a dependency
+You can use a variable from another workflow/run, this will save you the trouble of using the [terraform_remote_state](https://www.terraform.io/language/state/remote-state-data) data resource
+
+*This currently only works for workflows/runs that are in the same namespace*
+
+```yaml
+apiVersion: run.terraform-operator.io/v1alpha1
+kind: Terraform
+metadata:
+  name: terraform-run1
+spec:
+  terraformVersion: 1.1.7
+
+  module:
+    source: IbraheemAlSaady/test/module
+    version: 0.0.3
+
+  variables:
+    - key: length
+      value: "4"
+
+  outputs:
+    - key: number
+      moduleOutputName: number
+---
+apiVersion: run.terraform-operator.io/v1alpha1
+kind: Terraform
+metadata:
+  name: terraform-run2
+spec:
+  terraformVersion: 1.1.7
+
+  module:
+    source: IbraheemAlSaady/test/module
+    version: 0.0.3
+
+  ## this must be specified in order for the variable dependencyRef to work
+  dependsOn:
+    - name: terraform-run1
+
+  variables:
+    - key: length
+      dependencyRef:
+        name: terraform-run1
+        ## this is the key from the "terraform-run1" output field
+        key: number
+```
