--- a/docs/features/8.dependencies.md
+++ b/docs/features/8.dependencies.md
@@ -6,7 +6,7 @@ nav_order: 8
 ---
 
 # Dependencies
-The Terraform Operator supports dependency on other `Terraform` runs.
+The Terraform Operator supports dependency on other `Terraform` runs whether within the same namespace or a different namespace.
 
 ```yaml
 apiVersion: run.terraform-operator.io/v1alpha1
@@ -26,4 +26,4 @@ spec:
       # namespace: another-namespace
 ```
 
-You can also specify a dependency on a run in a different namespace as shown above.
+You can also specify variables based on the output of the dependency, check [here](https://kube-champ.github.io/terraform-operator/features/3.variables/#Variables-from-a-dependency) for examples
