backend defaulting to k8s as a backend

--- a/docs/features/6.backend.md
+++ b/docs/features/6.backend.md
@@ -21,6 +21,8 @@ spec:
 ```
 
 ## Using Kubernetes as a terraform backend
+If the `backend` field was not provided, it will default to the Kubernetes backend. For more custom configuration, you can modify the `backend` field as below
+
 ```yaml
 apiVersion: run.terraform-operator.io/v1alpha1
 kind: Terraform
