--- a/docs/features/8.dependencies.md
+++ b/docs/features/8.dependencies.md
@@ -26,4 +26,4 @@ spec:
       # namespace: another-namespace
 ```
 
-You can also specify variables based on the output of the dependency, check [here](https://kube-champ.github.io/terraform-operator/features/3.variables/#Variables-from-a-dependency) for examples
+You can also specify variables based on the output of the dependency, check [here](https://kuptan.github.io/terraform-operator/features/3.variables/#Variables-from-a-dependency) for examples
